Created mobile version of the intro and navigation

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Zima Blue
 
 <div class="intro_wrapper">
 	<div class="intro_container">
-    <img src="assets/images/zb-logo-white.svg" alt="zb-logo-white" class="intro_logo">
+    <div class="intro_logo"></div>
 		<div class="intro_content">We specialize in digital strategy, design, development, and training.</div>
 		<div class="intro_btn">Learn More</div>
 	</div>
